Apparently micrometer docker-tests aren't on the latest JDK. Fixing the test.